styled the fonts and colors

--- a/index.html
+++ b/index.html
@@ -6,64 +6,64 @@
     <link rel="stylesheet" href="style.css">    
   </head>
   <body>
-    <header class="flex">
+    <header class="flex dark-bg0">
       <img src="./images/logo.png" alt="chrismas activity book logo" height="50px" width="150px">
       <nav>
         <ul class="flex">
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li class="fs3">Home</li>
+          <li class="fs3">About</li>
+          <li class="fs3">Contact</li>
         </ul>
       </nav>
     </header>
 
     <section>
-      <article class="flex">
+      <article class="flex dark-bg0">
         <div>
-          <h1>This Chrismas Activity book is awesome.</h1>
-          <p>This book has activities to stimulate the growth of right and left brain of your little champs.</p>
-          <button>Buy Now</button>
+          <h1 class="fs0 fc-light0">This Chrismas Activity book is awesome.</h1>
+          <p class="fs3 fc-medium1">This book has activities to stimulate the growth of right and left brain of your little champs.</p>
+          <button class="dark-bg1 fc-light0">Buy Now</button>
         </div>
         <div>
           <img src="./images/chrismasActivityBook.jpg" alt="chrismas activity book cover" height="250px" width="500px">
         </div>
       </article>
       <article>
-        <h2>Features of the Activity Book</h2>
+        <h2 class="fs1 fc-dark0">Features of the Activity Book</h2>
         <div class="flex">
           <div>
             <img src="" alt="" height="150px" width="150px">
-            <p>Drawing pages for the little artist</p>
+            <p class="fs3 fc-medium0">Drawing pages for the little artist</p>
           </div>
           <div>
             <img src="" alt="" height="150px" width="150px">
-            <p>Puzzle pages for the little puzzler</p>
+            <p class="fs3 fc-medium0">Puzzle pages for the little puzzler</p>
           </div>
           <div>
             <img src="" alt="" height="150px" width="150px">
-            <p>Math pages to develop the problem solving</p>
+            <p class="fs3 fc-medium0">Math pages to develop the problem solving</p>
           </div>
           <div>
             <img src="" alt="" height="150px" width="150px">
-            <p>Cut and paste activity for motor development</p>
+            <p class="fs3 fc-medium0">Cut and paste activity for motor development</p>
           </div>
         </div>
       </article>
-      <article>
-        <p>This activity book is awesome. I got it for my kid and he enjoyed it . He finished it in one sitting. He was so happy while doing the activities. Thank you author for such lovely gift for my kid.</p>
+      <article class="light-bg">
+        <p class="fs1 fc-medium0">This activity book is awesome. I got it for my kid and he enjoyed it . He finished it in one sitting. He was so happy while doing the activities. Thank you author for such lovely gift for my kid.</p>
         <p>-Elon Musk, Meme God</p>
       </article>
-      <article>
+      <article class="dark-bg1">
         <div>
-          <p>Call to action! It's time!</p>
-          <p>Sign up for our product by clicking that button right over there!</p>
+          <p class="fs2 fc-light0">Call to action! It's time!</p>
+          <p class="fs3">Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button>Sign up</button>
+        <button class="fc-light0 dark-bg1">Sign up</button>
       </article>
     </section>
 
-    <footer>
-      <p>Copyright Chrismas Book</p>
+    <footer class="dark-bg0">
+      <p class="fc-light0">Copyright Chrismas Book</p>
     </footer>
   </body>
 </html>
