applied styles to header

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css">    
   </head>
   <body>
-    <header class="flex dark-bg0">
+    <header class="flex flex-sb dark-bg0">
       <img src="./images/logo.png" alt="chrismas activity book logo" height="50px" width="150px">
       <nav>
-        <ul class="flex">
+        <ul class="flex fc-medium1">
           <li class="fs3">Home</li>
           <li class="fs3">About</li>
           <li class="fs3">Contact</li>
@@ -18,17 +18,17 @@
     </header>
 
     <section>
-      <article class="flex dark-bg0">
-        <div>
+      <article class="one flex dark-bg0">
+        <div class="headingDiv">
           <h1 class="fs0 fc-light0">This Chrismas Activity book is awesome.</h1>
           <p class="fs3 fc-medium1">This book has activities to stimulate the growth of right and left brain of your little champs.</p>
           <button class="dark-bg1 fc-light0">Buy Now</button>
         </div>
         <div>
-          <img src="./images/chrismasActivityBook.jpg" alt="chrismas activity book cover" height="250px" width="500px">
+          <img src="./images/chrismasActivityBook.jpg" alt="chrismas activity book cover" height="300px" width="500px">
         </div>
       </article>
-      <article>
+      <article class="two">
         <h2 class="fs1 fc-dark0">Features of the Activity Book</h2>
         <div class="flex">
           <div>
@@ -49,11 +49,11 @@
           </div>
         </div>
       </article>
-      <article class="light-bg">
-        <p class="fs1 fc-medium0">This activity book is awesome. I got it for my kid and he enjoyed it . He finished it in one sitting. He was so happy while doing the activities. Thank you author for such lovely gift for my kid.</p>
+      <article class="three light-bg">
+        <p class="fs2 fc-medium0">This activity book is awesome. I got it for my kid and he enjoyed it . He finished it in one sitting. He was so happy while doing the activities. Thank you author for such lovely gift for my kid.</p>
         <p>-Elon Musk, Meme God</p>
       </article>
-      <article class="dark-bg1">
+      <article class="four dark-bg1">
         <div>
           <p class="fs2 fc-light0">Call to action! It's time!</p>
           <p class="fs3">Sign up for our product by clicking that button right over there!</p>
