styles applied to all the sections

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section>
-      <article class="one flex dark-bg0">
+      <article class="one flex flex-sb .gap20 dark-bg0">
         <div class="headingDiv">
           <h1 class="fs0 fc-light0">This Chrismas Activity book is awesome.</h1>
           <p class="fs3 fc-medium1">This book has activities to stimulate the growth of right and left brain of your little champs.</p>
@@ -30,35 +30,35 @@
       </article>
       <article class="two">
         <h2 class="fs1 fc-dark0">Features of the Activity Book</h2>
-        <div class="flex">
+        <div class="demo-img flex flex-sb">
           <div>
-            <img src="" alt="" height="150px" width="150px">
+            <img src="./images/worksheet1.png" alt="" height="150px" width="150px">
             <p class="fs3 fc-medium0">Drawing pages for the little artist</p>
           </div>
           <div>
-            <img src="" alt="" height="150px" width="150px">
+            <img src="./images/worksheet2.png" alt="" height="150px" width="150px">
             <p class="fs3 fc-medium0">Puzzle pages for the little puzzler</p>
           </div>
           <div>
-            <img src="" alt="" height="150px" width="150px">
+            <img src="./images/worksheet3.png" alt="" height="150px" width="150px">
             <p class="fs3 fc-medium0">Math pages to develop the problem solving</p>
           </div>
           <div>
-            <img src="" alt="" height="150px" width="150px">
+            <img src="./images/worksheet4.jpeg" alt="" height="150px" width="150px">
             <p class="fs3 fc-medium0">Cut and paste activity for motor development</p>
           </div>
         </div>
       </article>
       <article class="three light-bg">
         <p class="fs2 fc-medium0">This activity book is awesome. I got it for my kid and he enjoyed it . He finished it in one sitting. He was so happy while doing the activities. Thank you author for such lovely gift for my kid.</p>
-        <p>-Elon Musk, Meme God</p>
+        <p class="quote-author">-Elon Musk, Meme God</p>
       </article>
-      <article class="four dark-bg1">
+      <article class="four flex flex-sb dark-bg2">
         <div>
-          <p class="fs2 fc-light0">Call to action! It's time!</p>
-          <p class="fs3">Sign up for our product by clicking that button right over there!</p>
+          <p class="action-word fs2 fc-light0">Call to action! It's time!</p>
+          <p class="fs4 fc-light0">Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button class="fc-light0 dark-bg1">Sign up</button>
+        <button type="button" class="fc-light0 dark-bg1">Sign up</button>
       </article>
     </section>
 
